tests/data/checker_var_re_asset/good/one_line_if_inside.php
<?php
/**
 *
 * @author k.vagin
 */

function _smtp_connect()
{
	$ssl = NULL;
	if ($this->smtp_crypto == 'ssl')
		$ssl = 'ssl://';
}