tests/data/checker_var_re_asset/bad/2.php
<?php
/**
 *
 * @author k.vagin
 */

function vb($r)
{
	$b = $r;
	$a = $r;
	$b++;
	$a = $a;

	return $a + $b;
}